<resources>
    <string name="app_name">VehicleInfo Check</string>
    // String resources for Login fragment
    <string name="LoginHeading">VAHAN Account login details:</string>
    <string name="PasswordHint">Password</string>
    <string name="PhoneHint">Phone Number</string>
    <string name="LoginButton">Login</string>
    <string name="OrMsg">Don\'t have an account on VAHAN yet?</string>
    // String resources for Sign Up fragment
    <string name="SignUpHeading">Create your VAHAN account:</string>
    <string name="EmailHint">Email</string>
    <string name="ConfirmPassHint">Confirm password</string>
    <string name="SignUpButton">Sign Up</string>
    // String resources for Image Activity
    <string name="CameraButton">Camera</string>
    <string name="GalleryButton">Gallery</string>
    <string name="ImageDes">License plate image</string>
    <string name="ImHeading">VEHICLE</string>
    <string name="ImHeading2">INFOCHECK</string>
    <string name="ChooseImgMsg">Choose an image to scan</string>
    <string name="ScanMsgText">To extract license plate details from chosen image, click SCAN.</string>
    <string name="ScanButton">scan</string>
    <string name="browser">VAHAN Website</string>
    <string name="confirm_details">Confirm vehicle number</string>
    <string name="explanation_detail">since no software is 100% accurate</string>
    <string name="vehicle_no">Vehicle number</string>
    <string name="plate_hint">Vehicle num</string>
    <string name="captchaText">Captcha</string>
    <string name="captcha_hint">Enter Captcha</string>
    <string name="search">search</string>
    <string name="close">close</string>
</resources>